--- a/docker/nodejs-server/package.json
+++ b/docker/nodejs-server/package.json
@@ -21,6 +21,7 @@
         "cors": "^2.8.5",
         "express": "^4.16.4",
         "fs": "^0.0.1-security",
+        "sanitize-filename": "^1.6.3",
         "util": "^0.12.4"
     }
 }
