--- a/docker/api-server/package.json
+++ b/docker/api-server/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "json-stringify-safe": "^5.0.1",
     "morgan-body": "^2.6.6",
     "retry": "^0.13.1",
