--- a/docker/nodejs-server/package.json
+++ b/docker/nodejs-server/package.json
@@ -20,6 +20,7 @@
         "await-spawn": "^4.0.2",
         "cors": "^2.8.5",
         "express": "^4.16.4",
+        "express-validator": "^6.14.2",
         "fs": "^0.0.1-security",
         "sanitize-filename": "^1.6.3",
         "util": "^0.12.4"
