--- a/janitor/package.json
+++ b/janitor/package.json
@@ -8,6 +8,7 @@
   "author": "Microsoft",
   "dependencies": {
     "@azure/arm-appcontainers": "^1.0.0",
+    "@azure/data-tables": "^13.1.2",
     "@azure/identity": "^2.1.0",
     "axios": "^0.27.2",
     "p-retry": "^5.1.1"
