--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://devdiv.pkgs.visualstudio.com/_packaging/VS/npm/registry/ 
-                        
+@vs:registry=https://devdiv.pkgs.visualstudio.com/_packaging/VS/npm/registry/ 
+@vscode-internal:registry=https://devdiv.pkgs.visualstudio.com/DevDiv/_packaging/vscode-internal/npm/registry/               
 always-auth=true
